test/test_examples/syntactic_examples/syntax_error/error_statement_19.zig
// Syntax error: missing variable name in variable definition

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    var : f64 = 3.14;
}